# David-Xie123.github.io

./: .gitignore  .replit  CNAME  README.md  _config.yml  about.md  index.md  main.py  navbar.html  pyproject.toml  python.toml
Individual Crossover/: lacrossegame.py
_includes/: navigation.html
src/: menu.py  numberGuessing.py
src/week0/: menu.py
src/week1/: listsandloops.py
src/week2/: factorial.py  factors.py  imperativeFactors.py  oopFactors.py  palindrome.py
templates/: index.html  listsandloops.py
templates/layouts/: base.html  navbar.html
